Header/Sidebar/Footer svg icon 추가 및 스타일 작업

--- a/public/styles/scss/Content.scss
+++ b/public/styles/scss/Content.scss
@@ -1,6 +1,7 @@
-$content-background: #fffcf4;
+@import './global.scss';
+
+$content-background: $snore-white;
 
 .content {
     background-color: $content-background;
-    min-height: 1080px;
 }
