--- a/public/styles/scss/App.scss
+++ b/public/styles/scss/App.scss
@@ -1,7 +1,11 @@
-@import './fonts.scss';
+@import './global.scss';
 
 * {
     box-sizing: border-box;
+}
+
+html {
+    position: relative;
 }
 
 html,
@@ -10,13 +14,33 @@ h1 {
     display: block;
 }
 
+html,
+body {
+    min-height: 100%;
+    background-color: $snore-white;
+}
+
 body,
 div,
 header,
 footer,
 a,
-h1 {
+h1,
+button,
+img {
+    padding: 0;
     margin: 0;
+}
+
+button {
+    background-color: transparent;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+}
+
+img {
+    width: 100%;
+    height: 100%;
 }
 
 code,
