--- a/public/styles/scss/Footer.scss
+++ b/public/styles/scss/Footer.scss
@@ -1,7 +1,22 @@
-$footer-background: #cccac3;
+@import './global.scss';
+
+$footer-background: $snore-black;
 
 .footer {
-    display: block;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
     height: 300px;
     background-color: $footer-background;
+    color: white;
+    text-align: center;
+    font-family: 'Noto Sans';
+
+    .footer_content {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
 }
