Footer가 Content 덮는 문제 수정

--- a/public/styles/scss/Footer.scss
+++ b/public/styles/scss/Footer.scss
@@ -7,7 +7,7 @@ $footer-background: $snore-black;
     left: 0;
     bottom: 0;
     width: 100%;
-    height: 300px;
+    height: $footer-height;
     background-color: $footer-background;
     color: white;
     text-align: center;
