mini header 아래 shadow 추가

--- a/public/styles/scss/Header.scss
+++ b/public/styles/scss/Header.scss
@@ -12,7 +12,6 @@ $title-color: $snore-black;
         color: $title-color;
         font-family: 'Permanent Marker';
         font-weight: 400;
-        padding-bottom: 10px;
 
         a {
             cursor: pointer;
@@ -48,24 +47,28 @@ $title-color: $snore-black;
 
 .header.normal {
     height: 200px;
+    padding-bottom: 10px;
 
     h1 {
         font-size: 70px;
     }
 }
 
-$header-mini-height: 80px;
+$header-mini-height: 70px;
 
 .header.mini {
     position: fixed;
-    top: -$header-mini-height;
+    top: -$header-mini-height - 20px;
     left: 0;
     width: 100%;
     height: $header-mini-height;
     transition-duration: 0.2s;
+    -webkit-box-shadow: 0px -25px 50px 0px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 0px -25px 50px 0px rgba(0, 0, 0, 0.75);
+    box-shadow: 0px -25px 50px 0px rgba(0, 0, 0, 0.75);
 
     h1 {
-        font-size: 50px;
+        font-size: 40px;
     }
 }
 
