Post 하위 title, article 구성

--- a/public/styles/scss/Content.scss
+++ b/public/styles/scss/Content.scss
@@ -4,5 +4,5 @@ $content-background: $snore-white;
 
 .content {
     background-color: $content-background;
-    margin-bottom: $footer-height;
+    margin-bottom: $footer-height + 50px;
 }
