--- a/public/styles/scss/Header.scss
+++ b/public/styles/scss/Header.scss
@@ -66,6 +66,7 @@ $header-mini-height: 70px;
     -webkit-box-shadow: 0px -25px 50px 0px rgba(0, 0, 0, 0.75);
     -moz-box-shadow: 0px -25px 50px 0px rgba(0, 0, 0, 0.75);
     box-shadow: 0px -25px 50px 0px rgba(0, 0, 0, 0.75);
+    z-index: 50;
 
     h1 {
         font-size: 40px;
