--- a/public/styles/scss/Edit.scss
+++ b/public/styles/scss/Edit.scss
@@ -1,7 +1,8 @@
 @import './global.scss';
+@import '../../../node_modules/@toast-ui/editor/dist/toastui-editor.css';
 
-.editor {
-    width: 850px;
+.e_container {
+    width: 1000px;
     margin: 10px auto;
     font-family: 'Noto Sans';
     padding: 15px;
@@ -15,18 +16,19 @@
 .e_title_container {
     display: grid;
     place-items: center;
-    grid-template-columns: [first] 15% [second] 85%;
+    grid-template-columns: [first] 10% [second] 90%;
     height: 50px;
     margin-bottom: 20px;
-    padding: 3px 5px;
+    padding: 3px 0px;
     span {
         font-size: 25px;
     }
     input {
         width: 100%;
         height: 100%;
-        font-size: 30px;
-        border: 2px solid #d6d6d6;
+        font-size: 25px;
+        border: 1px solid #e4e4e4;
+        padding: 0px 7px;
         border-radius: 5px;
         outline: none;
         background: white;
@@ -35,8 +37,8 @@
 }
 
 .e_content_container {
-    min-height: 500px;
-    background-color: lightsalmon;
+    min-height: 600px;
+    background-color: white;
     margin-bottom: 20px;
 }
 
