history 대신 Link 사용, title 클릭 시 루트로 이동

--- a/public/styles/scss/Header.scss
+++ b/public/styles/scss/Header.scss
@@ -9,7 +9,6 @@ $title-color: $snore-black;
 
     h1 {
         margin: auto;
-        color: $title-color;
         font-family: 'Permanent Marker';
         font-weight: 400;
 
@@ -17,6 +16,8 @@ $title-color: $snore-black;
             cursor: pointer;
             -moz-user-select: none;
             -webkit-user-select: none;
+            text-decoration: none;
+            color: $title-color;
         }
     }
 
