--- a/public/styles/scss/Edit.scss
+++ b/public/styles/scss/Edit.scss
@@ -13,6 +13,14 @@
     border-radius: 5px;
 }
 
+.message_container {
+    width: 100%;
+    height: 700px;
+    display: grid;
+    place-items: center;
+    font-size: 30px;
+}
+
 .e_title_container {
     display: grid;
     place-items: center;
