--- a/public/styles/scss/Sidebar.scss
+++ b/public/styles/scss/Sidebar.scss
@@ -33,6 +33,19 @@ $sidebar-width: 250px;
             filter: invert(1);
         }
     }
+
+    .s_menu {
+        display: grid;
+        margin-top: 60px;
+        padding: 0 20px;
+        justify-items: start;
+
+        a {
+            text-decoration: none;
+            font-size: 18px;
+            color: white;
+        }
+    }
 }
 
 .sidebar.active {
