사이드바 전체 포스트 버튼 추가

--- a/public/styles/scss/Sidebar.scss
+++ b/public/styles/scss/Sidebar.scss
@@ -43,7 +43,23 @@ $sidebar-width: 250px;
         a {
             text-decoration: none;
             font-size: 18px;
+            margin-bottom: 20px;
             color: white;
+        }
+
+        .s_a_postlist{
+            display: flex;
+            width: 100%;
+            justify-content: space-between;
+
+            .s_count {
+                display: flex;
+                justify-content: center;
+                min-width: 30px;
+                border-radius: 5px;
+                color: $snore-black;
+                background-color: white;
+            }
         }
     }
 }
