새 포스트 작성 시 태그 추가

--- a/public/styles/scss/Edit.scss
+++ b/public/styles/scss/Edit.scss
@@ -21,7 +21,7 @@
     font-size: 30px;
 }
 
-.e_title_container {
+.e_title_container, .e_tag_container {
     display: grid;
     place-items: center;
     grid-template-columns: [first] 10% [second] 90%;
