--- a/public/styles/scss/App.scss
+++ b/public/styles/scss/App.scss
@@ -1,4 +1,5 @@
 @import './global.scss';
+@import '~highlight.js/styles/atom-one-dark.css';
 
 * {
     box-sizing: border-box;
@@ -46,8 +47,10 @@ img {
 
 code,
 .code {
+    display: block;
     font-family: 'Fira Code';
     font-weight: 500;
+    border-radius: 5px;
 }
 
 .flex {
