--- a/public/styles/scss/Post.scss
+++ b/public/styles/scss/Post.scss
@@ -77,6 +77,7 @@ $article-background: white;
     background-color: $article-background;
 }
 
+// TODO: article 디자인 변경
 .p_article {
     padding: 15px;
 }
