snore-dark-grey 색상 global로 추출

--- a/public/styles/scss/Post.scss
+++ b/public/styles/scss/Post.scss
@@ -76,7 +76,7 @@ code,
         padding: 2px 5px;
         margin: 5px;
         border-radius: 10px;
-        background-color: $snore-black;
+        background-color: $snore-dark-grey;
         color: $snore-white;
         transition: color 0.5s;
     }
